<resources>
    <string name="app_name">ArtlasBudapest</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="terkep">Térkép</string>
    <string name="int_zm_nyvezet_k">Intézményvezetők</string>
    <string name="az_int_zm_ny_c_me">Az intézmény címe</string>
    <string name="le_r_s">Leírás</string>
    <string name="fontosabb_ki_ll_t_sok">Fontosabb kiállítások</string>
    <string name="hivatkoz_sok">Hivatkozások</string>
    <string name="m_diatartalom">Médiatartalom</string>
    <string name="type1">Állami múzeum</string>
    <string name="type2">Állami kulturális központ</string>
    <string name="type3">Önkormányzati múzeum</string>
    <string name="type4">Önkormányzati kulturális központ</string>
    <string name="type5">Önkormányzati galéria</string>
    <string name="type6">Kereskedelmi galéria</string>
    <string name="type7">Független kulturális intézmény</string>
    <string name="type8">Non-profit galéria</string>
    <string name="type9">Kulturális intézet</string>
    <string name="type10">Egyesület</string>
    <string name="type11">Oktatási intézmény</string>
    <string name="type12">Étterem, kocsma, galéria</string>
    <string name="titleInfo">Jelmagyarázat</string>
    <string name="btn_keres">Keresés</string>
    <string name="btn_megse">Mégse</string>
    <string name="halozat_hiba">Az adatok letöltése sikertelen!</string>
    <string name="nem_elerheto">Nem elérhető a hálózat</string>
    <string name="keres_si_rt_kek">Keresési értékek</string>
    <string name="nev_hint">Intézmény neve</string>
    <string name="cim_hint">Intézmény címe</string>
    <string name="vezeto_hint">Intézményvezető</string>
    <string name="esemeny_hint">Esemény neve</string>
    <string name="szurok">Szűrők</string>
</resources>
