<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/scrollView2">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent">
            <TextView
                    android:text="@string/type1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    android:paddingLeft="8dp" app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView3"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    android:paddingLeft="8dp" app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/imageView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/imageView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView7" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/imageView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/imageView9"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView9"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView9" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/imageView10"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@+id/imageView11"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView11"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView11" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    app:layout_constraintTop_toTopOf="@+id/imageView12"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView12"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView12" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <TextView
                    android:text="@string/type12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    app:layout_constraintTop_toTopOf="@+id/imageView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView13"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView13" android:paddingLeft="8dp"
                    app:fontFamily="@font/roboto_light"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonallmuz"
                    android:id="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonallkulkozp"
                    android:id="@+id/imageView3"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikononkkulkozp"
                    android:id="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView5"
                    android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikononkgal"
                    android:id="@+id/imageView6"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonkergal"
                    android:id="@+id/imageView7"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonfuggkultint"
                    android:id="@+id/imageView8"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView7"
                    android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonnonp"
                    android:id="@+id/imageView9"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView8"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonkultint"
                    android:id="@+id/imageView10"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView9"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonegy"
                    android:id="@+id/imageView11"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView10"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonoktint"
                    android:id="@+id/imageView12"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView11"
                    android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikonett"
                    android:id="@+id/imageView13"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView12"
                    android:layout_margin="16dp"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ikononkmuz"
                    android:id="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_margin="16dp"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>